update templates